Nav spacing fix

--- a/src/less/navigation.less
+++ b/src/less/navigation.less
@@ -36,12 +36,15 @@ nav {
     list-style: none;
     margin: 0;
     padding: 0;
+    font-size: 0;
     li {
       display: inline-block;
+      font-size: 1rem;
       padding: calc((@navSize - 2rem)/2 - 1px) 0;
       a {
         display: block;
         padding: 0.25rem .5rem;
+        margin-left: .25rem;
         font-size: 0.9rem;
         font-weight: 700;
         color: @color-s800;
